asm-gateway/sa-istio.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: my-mesh
  labels:
    istio.io/rev: asm-managed-rapid # Check the revision of the ASM
    istio-injection: enabled
